Fixed gap

--- a/docs/css/base.css
+++ b/docs/css/base.css
@@ -113,7 +113,6 @@
 			display: inline-block;
 			border: 1px solid var(--accent-border-color);
 			border-radius: var(--main-radius);
-			margin-bottom: 10px;
 			padding: 0;
 			height: 175px;
 			width: 130px;
